BlockBase.Domain/Database/Sql/QueryParser/.antlr/BareBonesSqlParser.java
// Generated from /home/marcia/BlockBaseMaster/node/BlockBase.Domain/Database/Sql/QueryParser/BareBonesSql.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BareBonesSqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, K_USE=17, 
		K_CURRENT_DATABASE=18, K_LIST_DATABASES=19, K_GET_STRUCTURE=20, K_NOT_TO_ENCRYPT=21, 
		K_IF=22, K_EXECUTE=23, K_BOOL=24, K_DATETIME=25, K_DURATION=26, K_INT=27, 
		K_DECIMAL=28, K_DOUBLE=29, K_TEXT=30, K_ENCRYPTED=31, K_RANGE=32, K_ADD=33, 
		K_ALL=34, K_ALTER=35, K_AND=36, K_ASC=37, K_BY=38, K_COLUMN=39, K_CONSTRAINT=40, 
		K_CREATE=41, K_CROSS=42, K_DATABASE=43, K_DELETE=44, K_DESC=45, K_DISTINCT=46, 
		K_DROP=47, K_FROM=48, K_INNER=49, K_INSERT=50, K_INTO=51, K_JOIN=52, K_KEY=53, 
		K_LEFT=54, K_LIMIT=55, K_NATURAL=56, K_NO=57, K_NOT=58, K_NULL=59, K_OFFSET=60, 
		K_ON=61, K_OR=62, K_ORDER=63, K_OUTER=64, K_PRIMARY=65, K_REFERENCES=66, 
		K_RENAME=67, K_SELECT=68, K_SET=69, K_TABLE=70, K_TO=71, K_UNIQUE=72, 
		K_UPDATE=73, K_USING=74, K_VALUES=75, K_WHERE=76, IDENTIFIER=77, NUMERIC_LITERAL=78, 
		BIND_PARAMETER=79, STRING_LITERAL=80, UNEXPECTED_CHAR=81;
	public static final int
		RULE_parse = 0, RULE_error = 1, RULE_sql_stmt_list = 2, RULE_sql_stmt = 3, 
		RULE_use_database_stmt = 4, RULE_current_database_stmt = 5, RULE_list_databases_stmt = 6, 
		RULE_get_structure_stmt = 7, RULE_create_database_stmt = 8, RULE_drop_database_stmt = 9, 
		RULE_create_table_stmt = 10, RULE_alter_table_stmt = 11, RULE_drop_table_stmt = 12, 
		RULE_insert_stmt = 13, RULE_update_stmt = 14, RULE_delete_stmt = 15, RULE_operator = 16, 
		RULE_if_stmt = 17, RULE_simple_select_stmt = 18, RULE_select_core = 19, 
		RULE_ordering_term = 20, RULE_result_column = 21, RULE_table_or_subquery = 22, 
		RULE_join_clause = 23, RULE_join_operator = 24, RULE_join_constraint = 25, 
		RULE_column_def = 26, RULE_data_type = 27, RULE_bucket_number = 28, RULE_bucket_range = 29, 
		RULE_column_constraint = 30, RULE_expr = 31, RULE_foreign_key_clause = 32, 
		RULE_signed_number = 33, RULE_literal_value = 34, RULE_keyword = 35, RULE_name = 36, 
		RULE_table_name = 37, RULE_new_table_name = 38, RULE_column_name = 39, 
		RULE_new_column_name = 40, RULE_database_name = 41, RULE_foreign_table = 42, 
		RULE_table_column_name = 43, RULE_any_name = 44, RULE_complex_name = 45;
	public static final String[] ruleNames = {
		"parse", "error", "sql_stmt_list", "sql_stmt", "use_database_stmt", "current_database_stmt", 
		"list_databases_stmt", "get_structure_stmt", "create_database_stmt", "drop_database_stmt", 
		"create_table_stmt", "alter_table_stmt", "drop_table_stmt", "insert_stmt", 
		"update_stmt", "delete_stmt", "operator", "if_stmt", "simple_select_stmt", 
		"select_core", "ordering_term", "result_column", "table_or_subquery", 
		"join_clause", "join_operator", "join_constraint", "column_def", "data_type", 
		"bucket_number", "bucket_range", "column_constraint", "expr", "foreign_key_clause", 
		"signed_number", "literal_value", "keyword", "name", "table_name", "new_table_name", 
		"column_name", "new_column_name", "database_name", "foreign_table", "table_column_name", 
		"any_name", "complex_name"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'('", "','", "')'", "'='", "'<'", "'<='", "'>'", "'>='", 
		"'!='", "'{'", "'}'", "'.*'", "'.'", "'+'", "'-'", null, null, null, null, 
		"'!'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "K_USE", "K_CURRENT_DATABASE", "K_LIST_DATABASES", 
		"K_GET_STRUCTURE", "K_NOT_TO_ENCRYPT", "K_IF", "K_EXECUTE", "K_BOOL", 
		"K_DATETIME", "K_DURATION", "K_INT", "K_DECIMAL", "K_DOUBLE", "K_TEXT", 
		"K_ENCRYPTED", "K_RANGE", "K_ADD", "K_ALL", "K_ALTER", "K_AND", "K_ASC", 
		"K_BY", "K_COLUMN", "K_CONSTRAINT", "K_CREATE", "K_CROSS", "K_DATABASE", 
		"K_DELETE", "K_DESC", "K_DISTINCT", "K_DROP", "K_FROM", "K_INNER", "K_INSERT", 
		"K_INTO", "K_JOIN", "K_KEY", "K_LEFT", "K_LIMIT", "K_NATURAL", "K_NO", 
		"K_NOT", "K_NULL", "K_OFFSET", "K_ON", "K_OR", "K_ORDER", "K_OUTER", "K_PRIMARY", 
		"K_REFERENCES", "K_RENAME", "K_SELECT", "K_SET", "K_TABLE", "K_TO", "K_UNIQUE", 
		"K_UPDATE", "K_USING", "K_VALUES", "K_WHERE", "IDENTIFIER", "NUMERIC_LITERAL", 
		"BIND_PARAMETER", "STRING_LITERAL", "UNEXPECTED_CHAR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BareBonesSql.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BareBonesSqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(BareBonesSqlParser.EOF, 0); }
		public List<Sql_stmt_listContext> sql_stmt_list() {
			return getRuleContexts(Sql_stmt_listContext.class);
		}
		public Sql_stmt_listContext sql_stmt_list(int i) {
			return getRuleContext(Sql_stmt_listContext.class,i);
		}
		public List<ErrorContext> error() {
			return getRuleContexts(ErrorContext.class);
		}
		public ErrorContext error(int i) {
			return getRuleContext(ErrorContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << K_USE) | (1L << K_CURRENT_DATABASE) | (1L << K_LIST_DATABASES) | (1L << K_IF) | (1L << K_ALTER) | (1L << K_CREATE) | (1L << K_DELETE) | (1L << K_DROP) | (1L << K_INSERT))) != 0) || ((((_la - 68)) & ~0x3f) == 0 && ((1L << (_la - 68)) & ((1L << (K_SELECT - 68)) | (1L << (K_UPDATE - 68)) | (1L << (UNEXPECTED_CHAR - 68)))) != 0)) {
				{
				setState(94);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case K_USE:
				case K_CURRENT_DATABASE:
				case K_LIST_DATABASES:
				case K_IF:
				case K_ALTER:
				case K_CREATE:
				case K_DELETE:
				case K_DROP:
				case K_INSERT:
				case K_SELECT:
				case K_UPDATE:
					{
					setState(92);
					sql_stmt_list();
					}
					break;
				case UNEXPECTED_CHAR:
					{
					setState(93);
					error();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ErrorContext extends ParserRuleContext {
		public Token UNEXPECTED_CHAR;
		public TerminalNode UNEXPECTED_CHAR() { return getToken(BareBonesSqlParser.UNEXPECTED_CHAR, 0); }
		public ErrorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_error; }
	}

	public final ErrorContext error() throws RecognitionException {
		ErrorContext _localctx = new ErrorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_error);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			((ErrorContext)_localctx).UNEXPECTED_CHAR = match(UNEXPECTED_CHAR);
			 
			     throw new System.Exception("UNEXPECTED_CHAR=" + (((ErrorContext)_localctx).UNEXPECTED_CHAR!=null?((ErrorContext)_localctx).UNEXPECTED_CHAR.getText():null)); 
			   
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sql_stmt_listContext extends ParserRuleContext {
		public List<Sql_stmtContext> sql_stmt() {
			return getRuleContexts(Sql_stmtContext.class);
		}
		public Sql_stmtContext sql_stmt(int i) {
			return getRuleContext(Sql_stmtContext.class,i);
		}
		public Sql_stmt_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_stmt_list; }
	}

	public final Sql_stmt_listContext sql_stmt_list() throws RecognitionException {
		Sql_stmt_listContext _localctx = new Sql_stmt_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sql_stmt_list);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			sql_stmt();
			setState(105);
			match(T__0);
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(106);
					sql_stmt();
					setState(107);
					match(T__0);
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sql_stmtContext extends ParserRuleContext {
		public Create_database_stmtContext create_database_stmt() {
			return getRuleContext(Create_database_stmtContext.class,0);
		}
		public Drop_database_stmtContext drop_database_stmt() {
			return getRuleContext(Drop_database_stmtContext.class,0);
		}
		public Alter_table_stmtContext alter_table_stmt() {
			return getRuleContext(Alter_table_stmtContext.class,0);
		}
		public Create_table_stmtContext create_table_stmt() {
			return getRuleContext(Create_table_stmtContext.class,0);
		}
		public Drop_table_stmtContext drop_table_stmt() {
			return getRuleContext(Drop_table_stmtContext.class,0);
		}
		public Insert_stmtContext insert_stmt() {
			return getRuleContext(Insert_stmtContext.class,0);
		}
		public Update_stmtContext update_stmt() {
			return getRuleContext(Update_stmtContext.class,0);
		}
		public Delete_stmtContext delete_stmt() {
			return getRuleContext(Delete_stmtContext.class,0);
		}
		public Simple_select_stmtContext simple_select_stmt() {
			return getRuleContext(Simple_select_stmtContext.class,0);
		}
		public Use_database_stmtContext use_database_stmt() {
			return getRuleContext(Use_database_stmtContext.class,0);
		}
		public Current_database_stmtContext current_database_stmt() {
			return getRuleContext(Current_database_stmtContext.class,0);
		}
		public List_databases_stmtContext list_databases_stmt() {
			return getRuleContext(List_databases_stmtContext.class,0);
		}
		public If_stmtContext if_stmt() {
			return getRuleContext(If_stmtContext.class,0);
		}
		public Sql_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_stmt; }
	}

	public final Sql_stmtContext sql_stmt() throws RecognitionException {
		Sql_stmtContext _localctx = new Sql_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sql_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(114);
				create_database_stmt();
				}
				break;
			case 2:
				{
				setState(115);
				drop_database_stmt();
				}
				break;
			case 3:
				{
				setState(116);
				alter_table_stmt();
				}
				break;
			case 4:
				{
				setState(117);
				create_table_stmt();
				}
				break;
			case 5:
				{
				setState(118);
				drop_table_stmt();
				}
				break;
			case 6:
				{
				setState(119);
				insert_stmt();
				}
				break;
			case 7:
				{
				setState(120);
				update_stmt();
				}
				break;
			case 8:
				{
				setState(121);
				delete_stmt();
				}
				break;
			case 9:
				{
				setState(122);
				simple_select_stmt();
				}
				break;
			case 10:
				{
				setState(123);
				use_database_stmt();
				}
				break;
			case 11:
				{
				setState(124);
				current_database_stmt();
				}
				break;
			case 12:
				{
				setState(125);
				list_databases_stmt();
				}
				break;
			case 13:
				{
				setState(126);
				if_stmt();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Use_database_stmtContext extends ParserRuleContext {
		public TerminalNode K_USE() { return getToken(BareBonesSqlParser.K_USE, 0); }
		public Database_nameContext database_name() {
			return getRuleContext(Database_nameContext.class,0);
		}
		public Use_database_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_use_database_stmt; }
	}

	public final Use_database_stmtContext use_database_stmt() throws RecognitionException {
		Use_database_stmtContext _localctx = new Use_database_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_use_database_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(K_USE);
			setState(130);
			database_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Current_database_stmtContext extends ParserRuleContext {
		public TerminalNode K_CURRENT_DATABASE() { return getToken(BareBonesSqlParser.K_CURRENT_DATABASE, 0); }
		public Current_database_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_current_database_stmt; }
	}

	public final Current_database_stmtContext current_database_stmt() throws RecognitionException {
		Current_database_stmtContext _localctx = new Current_database_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_current_database_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(K_CURRENT_DATABASE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_databases_stmtContext extends ParserRuleContext {
		public TerminalNode K_LIST_DATABASES() { return getToken(BareBonesSqlParser.K_LIST_DATABASES, 0); }
		public List_databases_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_databases_stmt; }
	}

	public final List_databases_stmtContext list_databases_stmt() throws RecognitionException {
		List_databases_stmtContext _localctx = new List_databases_stmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_list_databases_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(K_LIST_DATABASES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Get_structure_stmtContext extends ParserRuleContext {
		public TerminalNode K_GET_STRUCTURE() { return getToken(BareBonesSqlParser.K_GET_STRUCTURE, 0); }
		public Database_nameContext database_name() {
			return getRuleContext(Database_nameContext.class,0);
		}
		public Get_structure_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_get_structure_stmt; }
	}

	public final Get_structure_stmtContext get_structure_stmt() throws RecognitionException {
		Get_structure_stmtContext _localctx = new Get_structure_stmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_get_structure_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(K_GET_STRUCTURE);
			setState(137);
			database_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_database_stmtContext extends ParserRuleContext {
		public TerminalNode K_CREATE() { return getToken(BareBonesSqlParser.K_CREATE, 0); }
		public TerminalNode K_DATABASE() { return getToken(BareBonesSqlParser.K_DATABASE, 0); }
		public Database_nameContext database_name() {
			return getRuleContext(Database_nameContext.class,0);
		}
		public Create_database_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_database_stmt; }
	}

	public final Create_database_stmtContext create_database_stmt() throws RecognitionException {
		Create_database_stmtContext _localctx = new Create_database_stmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_create_database_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(K_CREATE);
			setState(140);
			match(K_DATABASE);
			setState(141);
			database_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Drop_database_stmtContext extends ParserRuleContext {
		public TerminalNode K_DROP() { return getToken(BareBonesSqlParser.K_DROP, 0); }
		public TerminalNode K_DATABASE() { return getToken(BareBonesSqlParser.K_DATABASE, 0); }
		public Database_nameContext database_name() {
			return getRuleContext(Database_nameContext.class,0);
		}
		public Drop_database_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drop_database_stmt; }
	}

	public final Drop_database_stmtContext drop_database_stmt() throws RecognitionException {
		Drop_database_stmtContext _localctx = new Drop_database_stmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_drop_database_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(K_DROP);
			setState(144);
			match(K_DATABASE);
			setState(145);
			database_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_table_stmtContext extends ParserRuleContext {
		public TerminalNode K_CREATE() { return getToken(BareBonesSqlParser.K_CREATE, 0); }
		public TerminalNode K_TABLE() { return getToken(BareBonesSqlParser.K_TABLE, 0); }
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public List<Column_defContext> column_def() {
			return getRuleContexts(Column_defContext.class);
		}
		public Column_defContext column_def(int i) {
			return getRuleContext(Column_defContext.class,i);
		}
		public Create_table_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_table_stmt; }
	}

	public final Create_table_stmtContext create_table_stmt() throws RecognitionException {
		Create_table_stmtContext _localctx = new Create_table_stmtContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_create_table_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(K_CREATE);
			setState(148);
			match(K_TABLE);
			setState(149);
			table_name();
			{
			setState(150);
			match(T__1);
			setState(151);
			column_def();
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(152);
				match(T__2);
				setState(153);
				column_def();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			match(T__3);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
